# e_commerce

./: pyproject.toml
core/: settings.py  urls.py
main/: urls.py  views.py
main/templates/main/: aboutpage.html  base.html  frontpage.html
userprofile/: models.py
userprofile/migrations/: 0001_initial.py
